# data-tools

./: .env  .gitignore  .yamllint.yml  README.md  azure-pipelines-template.yml  process-yaml-files.sh  readme.md
.ipynb_checkpoints/: upload_folders-checkpoint.sh
airbyte/: airbyte-values.yaml
airflow/: airflow-values-gen.yml  install-airflow.sh  pod_template_file.yml  podtemplateconfig.yml
aws/: getting_started.ipynb  rsync.sh
datahub/: .gitignore  README.md  datahub-values.yaml  install-datahub.sh  prerequisites.yaml  pyproject.toml
datahub/docs/: actions.md
datahub/examples/actions/: superset.action.yaml
datahub/examples/ingest/: postgres.ingest.yaml
datahub/oaf_datahub/: datahub.py  utils.py
datahub/oaf_datahub/actions/: __init__.py
datahub/oaf_datahub/actions/superset/: action.py  superset.py
datahub/releases/: install-prerequistes.sh  install-progres.sh  user.props
dbt/: requirements.txt
denv/: pyvenv.cfg
flink/: flink-ha.yaml  flink-values.yaml  flinkDeployment.yaml  flinkSessionJob.yaml  install-flink.sh
grafana/: grafana-values.yaml  mimir-values.yaml
kafka/: Dockerfile  clear-strimzi.sh  gatekeeper-values.yaml  install-kafka.sh  kafka-authz-realm.json  kafka-bridge-values.env.yaml  kafka-connect-values.env.yaml  kafka-connect-values.yaml  kafka-connectors-values.env.yaml  kafka-connectors-values.yaml  kafka-mirror-maker2-values.env.yaml  kafka-mirror-maker2-values.yaml  kafka-scram-user.yaml  kafka-ui-values.env.yaml  kafka-ui-values.yaml  kafka-values.env.yaml  kafka-values.yaml  metrics.yaml  realm-auth.json  secrets.yaml  (+4 more)
(+145 files in other folders)
